Correction: P letter spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,7 +71,7 @@ body {
 
 p {
   color: var(--color-text);
-  letter-spacing: 0.21176em;
+  letter-spacing: 0.02117em;
   line-height: 2em;
   margin-bottom: 2em;
 }
